update code and files of chapter 3

--- a/3.Hancraft-GPT/code/bpe.ipynb
+++ b/3.Hancraft-GPT/code/bpe.ipynb
@@ -377,6 +377,19 @@
     "\n",
     "tokenize(\"This is not a token.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "x = torch.ones((2,2,2,2))\n",
+    "mask = torch.ones((1,1,2,2))\n",
+    "x = x.masked_fill(mask==0, 0)"
+   ]
   }
  ],
  "metadata": {
