--- a/test.ipynb
+++ b/test.ipynb
@@ -2,23 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 3]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A qubit (quantum bit) is the fundamental unit of quantum information in quantum computing. It's a two-state system, meaning it can exist in one of two states simultaneously, which is known as a superposition.\n",
+      "\n",
+      "In classical computing, a bit can only be in one of two states: 0 or 1. In contrast, a qubit can exist in both 0 and 1 at the same time, making it a more versatile and powerful information storage device.\n",
+      "\n",
+      "This property allows qubits to process multiple possibilities simultaneously, which is known as quantum parallelism. It's like trying to solve a million problems at once!\n",
+      "\n",
+      "Qubits are also sensitive to their environment, which means they can be affected by external factors such as temperature and noise. This sensitivity makes it challenging to control and maintain the state of a qubit, but it's also what allows for the unique properties of quantum computing.\n",
+      "\n",
+      "Some key characteristics of qubits include:\n",
+      "\n",
+      "1. Superposition: Qubits can exist in multiple states simultaneously.\n",
+      "2. Entanglement: Qubits can be connected in a way that their properties are correlated, even when they're separated by large distances.\n",
+      "3. Quantum measurement: Qubits can be measured in a way that collapses the superposition into one of the possible states (0 or 1).\n",
+      "\n",
+      "Qubits are typically created using atomic or subatomic systems, such as electrons or photons, and are often manipulated using quantum gates, which are the quantum equivalent of logic gates in classical computing.\n",
+      "\n",
+      "The development of qubits is a crucial step in the creation of quantum computers, which have the potential to revolutionize fields like cryptography, optimization, and machine learning.\n"
+     ]
     }
    ],
    "source": [
-    "a = list(range(5))\n",
-    "a[1:5:2]"
+    "import ollama\n",
+    "\n",
+    "response = ollama.generate(model='llama3.2',\n",
+    "prompt='what is a qubit?')\n",
+    "print(response['response'])"
    ]
   }
  ],
