--- a/test.ipynb
+++ b/test.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = list(range(5))\n",
     "a[1:5:2]"
@@ -12,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! How can I assist you today?\n"
+     ]
+    }
+   ],
    "source": [
     "# Please install OpenAI SDK first: `pip3 install openai`\n",
     "\n",
@@ -80,7 +99,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kag-demo",
+   "display_name": "nlp",
    "language": "python",
    "name": "python3"
   },
@@ -94,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
