update llama code and docs

--- a/4.Hancraft-LLaMa/旋转位置编码.md
+++ b/4.Hancraft-LLaMa/旋转位置编码.md
@@ -212,7 +212,7 @@ ok，接下来我们就要证明函数 `g` 的计算公式是成立的。
 
 然后上面的讲解是假定的词嵌入维度是2维向量，而对于d >= 2 的通用情况，则是将词嵌入向量元素按照两两一组分组，每组应用同样的旋转操作且每组的旋转角度计算方式如下：
 $$
-θj=10000^{2(j−1)/d},j∈[1,2,...,d/2]
+θj=1/10000^{2(j−1)/d},j∈[1,2,...,d/2]
 $$
 所以简单来说 RoPE 的 self-attention 操作的流程是，对于 token 序列中的每个词嵌入向量，首先计算其对应的 query 和 key 向量，然后对每个 token 位置都计算对应的旋转位置编码，接着对每个 token 位置的 query 和 key 向量的元素按照 两两一组 应用旋转变换，最后再计算 query 和 key 之间的内积得到 self-attention 的计算结果。
 
@@ -281,7 +281,88 @@ $$
 
 ------
 
-### 
+
+
+## 代码
+
+代码是参考开源代码后自己搓的，然后经过gpt完善
+
+### precompute_freqs_cis
+
+角度信息是可以复用的，因此事先计算
+
+```
+def precompute_freqs_cis(dim: int, seq_len: int, theta: float = 10000.0):
+    """
+    Precomputes rotary embedding frequencies for a given head dimension and sequence length.
+    Args:
+        dim (int): Head dimension (should be even).
+        seq_len (int): Maximum sequence length.
+        theta (float): Base frequency scaling factor (default: 10000.0).
+    Returns:
+        torch.Tensor: Precomputed frequencies with shape (seq_len, dim // 2, 2).
+    """
+    # 每两个为一组公用一个频率
+    angel_split_num = dim // 2
+    angel_splits = torch.arange(0, angel_split_num).float() / angel_split_num
+    freqs = 1.0 / (theta ** angel_splits)
+    
+    # 时间
+    t = torch.arange(seq_len)
+    # 让 freqs 和 t 结合生成了一个外积矩阵，即基于单个时间单位的偏转角度（频率得到）和时间序列得到各个时间点的实际偏转角度，freqs大小为[seq_len, dim // 2]，这个值对应公式 e^(m theta) 中的 m theta
+    freqs = torch.outer(t, freqs).float()
+    
+    # 基于 m theta 计算 e^(m theta) 对应的 cos(m theta) 和 sin(m theta)
+    # 这里可以用polar函数，直接转换为复数形式，不容易理解所以不用
+    freqs_cis_real = freqs.cos()
+    freqs_cis_imag = freqs.sin()
+    freqs_cis_real_and_imag = torch.stack([freqs_cis_real, freqs_cis_imag], dim=-1)
+    # (seq_len, dim//2, 2)
+    return freqs_cis_real_and_imag
+```
+
+
+
+### apply_rope
+
+对Q,K矩阵执行位置编码
+
+```
+def apply_rope(x, freqs_cis_real_and_imag):
+    """
+    Applies rotary positional embedding to the input tensor.
+    Args:
+        x (torch.Tensor): Input tensor of shape (batch_size, num_heads, seq_len, head_dim).
+        freqs_cis_real_and_imag (torch.Tensor): Precomputed frequencies of shape 
+            (seq_len, head_dim // 2, 2).
+    Returns:
+        torch.Tensor: Tensor with RoPE applied, same shape as input.
+    """
+    # 必须确保维度是2的位数，因为必须两两为一组做旋转
+    assert x.size(-1) % 2 == 0, "Head dimension must be even to apply RoPE."
+    # x 变形后 [batch_size, num_q_heads, head_dim // 2, 2]
+    x = x.view(*x.shape[:-1], -1, 2)
+    
+    # 匹配x的长度
+    T = x.size(-3)
+    assert T <= freqs_cis_real_and_imag.size(0), "Sequence length exceeds precomputed frequencies."
+    freqs_cis_real_and_imag = freqs_cis_real_and_imag[:T]
+    
+    # q1' = q1cos - q2sin  q2' = q1sin + q2cos
+    # x[..., 0] 是 q 奇数位，x[..., 1] 是 q 偶数位
+    # freqs_cis_real_and_imag[..., 0] 是 cos， freqs_cis_real_and_imag[..., 1] 是 sin
+    y = torch.stack(
+        [
+            x[..., 0] * freqs_cis_real_and_imag[..., 0] - x[..., 1] * freqs_cis_real_and_imag[..., 1],
+            x[..., 1] * freqs_cis_real_and_imag[..., 0] + x[..., 0] * freqs_cis_real_and_imag[..., 1],
+        ],
+        -1,
+    )
+    # 最后恢复原本形状，将[batch_size, num_q_heads, head_dim // 2, 2]变为[batch_size, num_q_heads, head_dim]，从倒数第二位扁平化
+    return y.flatten(start_dim=-2)
+```
+
+
 
 
 
