--- a/4.Hancraft-LLaMa/多查询注意力+分组查询注意力.md
+++ b/4.Hancraft-LLaMa/多查询注意力+分组查询注意力.md
@@ -42,8 +42,6 @@ K, V：(512, 96)
 
 GQA的最简形式可以通过实现 GroupedQueryAttention 类来实现。GroupedQueryAttention 类继承自 Attention 类，重写了 forward 方法，其中使用了 MultiQueryAttention 类的实例来处理每个组的查询。通过将每个组的结果拼接起来，然后与投影矩阵进行矩阵乘法运算，最终得到 GQA 的输出。
 
-
-
 ## pytorch 示例实现：
 
 假设我们有以下初始化的query, key, value：
@@ -103,3 +101,88 @@ for score in attention_scores:
 ```
 
 这就是 Grouped Query Attention 的实现过程。在这个过程中，我们将查询头分组，然后对每一个查询组分别计算注意力分数和输出，最后将所有查询组的输出拼接起来。这样可以减少存储每个头的键和值所需的内存开销，特别是在具有大的上下文窗口或批次大小的情况下。
+
+## 自己实现的版本
+
+```
+class GroupQueryAttention(nn.Module):
+    """
+    分组查询注意力,与多头注意力的区别在于，多个query共享1对key和value
+    """
+    def __init__(self, config:LLaMaConfig) -> None:
+        super(GroupQueryAttention, self).__init__()
+
+        assert config.num_attention_heads % config.num_key_value_heads == 0
+        assert config.embed_dim % config.num_attention_heads == 0 
+
+        # query的head最多，所以单头的dim由query来决定，实际上kv的参数量少了
+        self.num_q_heads = config.num_attention_heads
+        self.num_kv_heads = config.num_key_value_heads
+        self.num_groups = config.num_attention_heads // config.num_key_value_heads
+        self.head_dim = config.embed_dim // config.num_attention_heads
+
+
+        self.q_proj = nn.Linear(config.embed_dim, config.embed_dim)
+        self.k_proj = nn.Linear(config.embed_dim, self.head_dim*config.num_key_value_heads)
+        self.v_proj = nn.Linear(config.embed_dim, self.head_dim*config.num_key_value_heads)
+        self.o_proj = nn.Linear(config.embed_dim, config.embed_dim)
+        self.dropout = nn.Dropout(config.prob_dropout)
+
+    def forward(self, 
+                query:torch.tensor, 
+                key:torch.tensor, 
+                value:torch.tensor, 
+                freqs_cis_real_and_imag:torch.tensor, 
+                mask:torch.tensor=None
+                ):
+        assert query.shape == key.shape == value.shape
+        batch_size, seq_len, num_emb = query.shape
+
+        # 映射
+        Q = self.q_proj(query)
+        K = self.k_proj(key)
+        V = self.v_proj(value)
+        # print(Q.shape, K.shape, V.shape)
+
+        # 拆分出头
+        # Q shape (batch_size, seq_len, num_q_heads, head_dim)
+        # KV shape (batch_size, seq_len, num_kv_heads, head_dim)
+        Q = torch.reshape(Q, (batch_size, seq_len, self.num_q_heads, self.head_dim))
+        K = torch.reshape(K, (batch_size, seq_len, self.num_kv_heads, self.head_dim))
+        V = torch.reshape(V, (batch_size, seq_len, self.num_kv_heads, self.head_dim))
+        # print(Q.shape, K.shape, V.shape)
+
+        # 翻转 head和seq两个维度
+        # Q shape (batch_size, num_q_heads, seq_len, head_dim)
+        # KV shape (batch_size, num_kv_heads, seq_len, head_dim)
+        Q = Q.transpose(1,2)
+        K = K.transpose(1,2)
+        V = V.transpose(1,2)
+        # print(Q.shape, K.shape, V.shape)
+
+        # 复制k和v的头，用repeat_interleave而不是repeat
+        # QKV shape (batch_size, num_q_heads, seq_len, head_dim)
+        K = K.repeat_interleave(self.num_groups, dim=1)
+        V = V.repeat_interleave(self.num_groups, dim=1)
+        # print(Q.shape, K.shape, V.shape)
+        
+        # 应用旋转位置编码
+        Q = apply_rope(Q, freqs_cis_real_and_imag)
+        K = apply_rope(K, freqs_cis_real_and_imag)
+
+        # 之后就和正常的MHA一样
+        atten_score = Q @ K.transpose(-1,-2) / math.sqrt(self.head_dim)
+        if mask is not None:
+            atten_score = atten_score.masked_fill(mask==0, float('-inf'))
+        atten_weight = torch.softmax(atten_score, dim=-1)
+        # print(atten_weight.shape)
+
+        y = atten_weight @ V
+        y = y.transpose(1,2).contiguous().reshape((batch_size, seq_len, -1))
+
+        y = self.o_proj(y)
+        y = self.dropout(y)
+
+        return y 
+```
+
