--- a/4.Hancraft-LLaMa/多查询注意力+分组查询注意力.md
+++ b/4.Hancraft-LLaMa/多查询注意力+分组查询注意力.md
@@ -2,11 +2,11 @@
 
 Multi Query Attention(MQA)在2019年就被提出来了，用于推理加速，但在当时并没有受到很多关注，毕竟一张2080就能跑Bert-base了。随着LLM的大火，MQA所带来的收益得以放大。
 
-## 1. GQA的定义
+## GQA的定义
 
 Grouped-Query Attention (GQA) 是对 Multi-Head Attention (MHA) 和 Multi-Query Attention (MQA) 的扩展。通过提供计算效率和模型表达能力之间的灵活权衡，实现了查询头的分组。**GQA将查询头分成了G个组，每个组共享一个公共的键（K）和值（V）投影**。
 
-## 2.GQA的变体
+## GQA的变体
 
 GQA有三种变体：
 
@@ -14,7 +14,7 @@ GQA有三种变体：
 2. GQA-H：组数等于头数，基本上与 Multi-Head Attention (MHA) 相同。
 3. GQA-G：一个中间配置，具有G个组，平衡了效率和表达能力。
 
-## 3.GQA的优势
+## GQA的优势
 
 使用G个组可以减少存储每个头的键和值所需的内存开销，特别是在具有大的上下文窗口或批次大小的情况下。GQA提供了对模型质量和效率的细致控制。
 
@@ -38,9 +38,24 @@ K, V：(512, 96)
 
 实验指标略微降低，但推理加速（dec部分）非常明显。
 
-## 4.GQA的实现
+
+
+## GQA的实现
 
 GQA的最简形式可以通过实现 GroupedQueryAttention 类来实现。GroupedQueryAttention 类继承自 Attention 类，重写了 forward 方法，其中使用了 MultiQueryAttention 类的实例来处理每个组的查询。通过将每个组的结果拼接起来，然后与投影矩阵进行矩阵乘法运算，最终得到 GQA 的输出。
+
+## GQA的关键点
+
+- 分组查询: 在GQA中，查询（query）被分成多个组，每个组独立计算注意力权重。这种分组可以减少计算量，因为每组的查询数量减少了。
+
+- 共享键和值: 尽管查询被分组，GQA会在所有组中共享键（key）和值（value），从而减少内存消耗，并确保模型的注意力机制仍然能够有效捕捉输入之间的关系。
+
+- 计算效率: 通过减少查询的数量，GQA大幅降低了计算成本，使得模型可以更高效地处理大规模数据，尤其是在资源有限的环境中。
+
+- 保留性能: 尽管进行了分组，GQA仍然能够保持与标准多头自注意力机制相似的性能。实验表明，在许多任务中，GQA可以在减少计算和内存使用的同时，仍然取得与传统方法相当的结果。
+
+
+
 
 ## pytorch 示例实现：
 
