update docs over chapter 3-5

--- a/5.Handcraft-Alpaca/微调概述.md
+++ b/5.Handcraft-Alpaca/微调概述.md
@@ -4,6 +4,10 @@
 
 理想情况下，模型调的对且能力够的情况下，prompt工程就能实现功能，单不能的情况下就得SFT
 
+
+
+## 背景介绍
+
 **通用大模型（例如GPT-4、Llama-3.1等）是基于大量的（包含公开的互联网爬取数据）文本数据训练的深度学习模型，具有通用的自然语言处理能力，可以处理多种任务**，如文本生成、翻译、问答、情感分析等。但是这些通用模型在训练过程中一**般没有针对特定的任务或领域进行微调**。所以在具体到某一个细分场景，表现可能达不到商用的标准。
 
 因此，为了提升面向商用标准能力，往往就会需要**对通用大模型进行微调，以使其在特定任务或领域上表现得更精确**、更有效。可以用一个比喻来形容：很多学校大一并不直接开设专业课，而是以基础学科位置，比如数学、物理、语言等。到了大二，才开始开设具体的专业课程。相当于大一期间锻炼基础的学术、学科储备能力，大二才进行专业课程的微调，以使学生在某一个具体的专业方向上具备更针对性、更强的专业能力。而涉及到微调，又细分为多种方法。还是以大学生培养的例子继续描述，学生专业课程的学习方式，既有经验丰富的资深老师来进行直接授课，也有专业课考试来检测并指导进一步提升的方向，还有动手实践课程，甚至是去相应的岗位进行实习。不同的学习方式可以带来不同的效果，并在一定程度上全面提升学生的专利能力。
