--- a/test.ipynb
+++ b/test.ipynb
@@ -2,104 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 3]"
+       "13.0385160446167"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = list(range(5))\n",
-    "a[1:5:2]"
+    "7e9 * 2 /1024 ** 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello! How can I assist you today?\n"
-     ]
+     "data": {
+      "text/plain": [
+       "255"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Please install OpenAI SDK first: `pip3 install openai`\n",
-    "\n",
-    "from openai import OpenAI\n",
-    "\n",
-    "client = OpenAI(api_key=\"sk-95e8482c68044bc590c9a27545768754\", base_url=\"https://api.deepseek.com\")\n",
-    "\n",
-    "response = client.chat.completions.create(\n",
-    "    model=\"deepseek-chat\",\n",
-    "    messages=[\n",
-    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant\"},\n",
-    "        {\"role\": \"user\", \"content\": \"Hello\"},\n",
-    "    ],\n",
-    "    stream=False\n",
-    ")\n",
-    "\n",
-    "print(response.choices[0].message.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:httpx:HTTP Request: POST http://127.0.0.1:11434/v1/embeddings \"HTTP/1.1 200 OK\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "similarity1: 0.688176\n",
-      "similarity2: 0.453242\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "from kag.common.vectorizer import Vectorizer\n",
-    "config = {\n",
-    "    \"vectorizer\": \"kag.common.vectorizer.OpenAIVectorizer\",\n",
-    "    \"model\": \"bge-m3\",\n",
-    "    \"api_key\": \"EMPTY\",\n",
-    "    \"base_url\": \"http://127.0.0.1:11434/v1\",\n",
-    "    \"vector_dimensions\": 1024,\n",
-    "}\n",
-    "vectorizer = Vectorizer.from_config(config)\n",
-    "inputs = [\"I am George Washington\", \"George Washington\", \"John Doe\"]\n",
-    "vecs = vectorizer.vectorize(inputs)\n",
-    "vec1 = np.array(vecs[0])\n",
-    "vec2 = np.array(vecs[1])\n",
-    "vec3 = np.array(vecs[2])\n",
-    "similarity1 = vec1.dot(vec2)\n",
-    "similarity2 = vec1.dot(vec3)\n",
-    "print(\"similarity1: %g\" % similarity1)\n",
-    "print(\"similarity2: %g\" % similarity2)"
+    "2 ** 8 -1"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nlp",
+   "display_name": "kag-demo",
    "language": "python",
    "name": "python3"
   },
@@ -113,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
