--- a/6.Handcraft-LoRA/codes/lora.ipynb
+++ b/6.Handcraft-LoRA/codes/lora.ipynb
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "from modelscope import AutoModelForCausalLM, AutoTokenizer\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "\n",
     "model_path = '/data01/tqbian/modelPATH/Qwen/Qwen2___5-1___5B-Instruct'\n",
     "\n",
