--- a/5.5.Prompt_Engineering/1.提示工程简介.md
+++ b/5.5.Prompt_Engineering/1.提示工程简介.md
@@ -56,9 +56,9 @@ blue.
 
 如果你正在使用 OpenAI Playground 或其他任何 LLM Playground，你可以按照以下屏幕截图中的方式提示模型：
 
-![](./assets/imageurl=%2F_next%2Fstatic%2Fmedia%2Fsky.b60b009f.png)
+![](./assets/Fsky.b60b009f.png)
 
-需要注意的是，当使用 OpenAI 的 `gpt-4` 或者 `gpt-3.5-turbo` 等聊天模型时，你可以使用三个不同的角色来构建 prompt： `system`、`user` 和 `assistant`。其中 `system` 不是必需的，但有助于设定 `assistant` 的整体行为，帮助模型了解用户的需求，并根据这些需求提供相应的响应。上面的示例仅包含一条 `user` 消息，你可以使用 `user` 消息直接作为 prompt。为简单起见，本指南所有示例（除非明确提及）将仅使用 `user` 消息来作为 `gpt-3.5-turbo` 模型的 prompt。上面示例中 `assistant` 的消息是模型的响应。你还可以定义 `assistant` 消息来传递模型所需行为的示例。你可以在[此处 (opens in a new tab)](https://www.promptingguide.ai/models/chatgpt) 了解有关使用聊天模型的更多信息。
+需要注意的是，当使用 OpenAI 的 `gpt-4` 或者 `gpt-3.5-turbo` 等聊天模型时，你可以使用三个不同的角色来构建 prompt： `system`、`user` 和 `assistant`。其中 `system` 不是必需的，但有助于设定 `assistant` 的整体行为，帮助模型了解用户的需求，并根据这些需求提供相应的响应。上面的示例仅包含一条 `user` 消息，你可以使用 `user` 消息直接作为 prompt。为简单起见，本指南所有示例（除非明确提及）将仅使用 `user` 消息来作为 `gpt-3.5-turbo` 模型的 prompt。上面示例中 `assistant` 的消息是模型的响应。你还可以定义 `assistant` 消息来传递模型所需行为的示例。你可以在[此处 ](https://www.promptingguide.ai/models/chatgpt) 了解有关使用聊天模型的更多信息。
 
 从上面的提示示例中可以看出，语言模型能够基于我们给出的上下文内容 `"The sky is"` 完成续写。输出可能是出乎意料的，或者与你想要完成的任务相去甚远。实际上，这个基本示例突出了提供更多上下文或明确指示你想要实现什么的必要性。这正是提示工程的核心所在。
 
@@ -266,7 +266,7 @@ Negative
 地点：里斯本，香帕利莫德中心
 ```
 
-输入文本来自[这篇 Nature 文章(opens in a new tab)](https://www.nature.com/articles/d41586-023-00509-z)。
+输入文本来自[这篇 Nature 文章](https://www.nature.com/articles/d41586-023-00509-z)。
 
 ### 避免不明确（越直接且连贯）
 
