--- a/5.5.Prompt_Engineering/2.提示词示例.md
+++ b/5.5.Prompt_Engineering/2.提示词示例.md
@@ -80,7 +80,7 @@ The large language model based product mentioned in the paragraph above is ChatG
 
 现在应该很明显，你可以通过简单地指示模型做什么来让它执行不同的任务。这是一个强大的能力，AI 产品开发人员已经在利用它来构建强大的产品和体验。
 
-段落来源: [ChatGPT: five priorities for research (opens in a new tab)](https://www.nature.com/articles/d41586-023-00288-7)
+段落来源: [ChatGPT: five priorities for research ](https://www.nature.com/articles/d41586-023-00288-7)
 
 * * *
 
@@ -104,7 +104,7 @@ _输出：_
 Mice.
 ```
 
-上下文获取自 [Nature (opens in a new tab)](https://www.nature.com/articles/d41586-023-00400-x)。
+上下文获取自 [Nature ](https://www.nature.com/articles/d41586-023-00400-x)。
 
 * * *
 
