--- a/5.Handcraft-Alpaca/显存占用估计.md
+++ b/5.Handcraft-Alpaca/显存占用估计.md
@@ -177,7 +177,7 @@ $$模型大小=N×D\text{模型大小} = N \times D$$
 
 **示例**： 如果模型有 $N = 10^9$ 个参数（10 亿），存储为 `float32`（4 字节），则模型总大小为：
 
-$模型大小=109×4=4 GB\text{模型大小} = 10^9 \times 4 = 4 \, \text{GB}$
+$模型大小=10^9×4=4 GB\text{模型大小} = 10^9 \times 4 = 4 \, \text{GB}$
 
 ------
 
