--- a/5.Handcraft-Alpaca/显存占用估计.md
+++ b/5.Handcraft-Alpaca/显存占用估计.md
@@ -124,7 +124,10 @@ FP32（单精度浮点数）的最大值由 IEEE 754 标准定义，可以通过
 - $2^{127}$: 一个非常大的数字。
 - $2 - 2^{-23}$: 接近于 2，为 1.999999880790710449218751.99999988079071044921875。
 
-两者相乘得到最大值。
+两者相乘得到最大值。  
+
+这个网站可以可视化如何计算。
+https://evanw.github.io/float-toy/
 
 ### Python 计算
 
