--- a/5.Handcraft-Alpaca/显存占用估计.md
+++ b/5.Handcraft-Alpaca/显存占用估计.md
@@ -249,7 +249,7 @@ $\text{总内存} = 4 + 4 + 8 + 4 + 2 = 22 \, \text{GB}$
 
 训练时的内存使用可以通过以下公式估算：
 
-总内存=4×N×D+A+B\text{总内存} = $4 \times N \times D + A + B$
+$\text{总内存} = 4 \times N \times D + A + B$
 
 其中：
 
