--- a/5.Handcraft-Alpaca/显存占用估计.md
+++ b/5.Handcraft-Alpaca/显存占用估计.md
@@ -219,7 +219,7 @@ $$
 
 计算：
 
-1. **模型参数内存**：$N \times D = 10^9$。
+1. **模型参数内存**：$N \times D = 4 \, \text{GB}$。
 2. **梯度内存**：$N \times D = 4 \, \text{GB}$。
 3. **优化器状态内存**：$N \times D = 2 \times 4 = 8 \, \text{GB}$。
 4. **激活值内存**：$A = 4 \, \text{GB}$。
