--- a/[00]-Basics/软件配置.md
+++ b/[00]-Basics/软件配置.md
@@ -13,6 +13,25 @@
 
 
 
+# Git
+
+```shell
+# git 配置用户信息
+git config --global user.name "John Doe"
+git config --global user.email johndoe@example.com
+
+# 列出所有 Git 当时能找到的配置
+git config --list
+git config -l --global
+git config -l
+
+# git设置http代理，7890是vpn的端口号
+git config --global http.proxy 'http://127.0.0.1:7890'
+git config --global https.proxy 'https://127.0.0.1:7890'
+```
+
+
+
 # 镜像配置
 
 - conda配置镜像源
